examples/negative/parser_syntax/row_arg_leading_var.kai
# Negative fixture (#772 / parser): a compound effect row as a type
# argument whose *leading* item is a lowercase row variable
# (`a + Stdout`). A row variable may only be the last item in a row,
# so it cannot lead a `+`-joined compound row argument. The parser
# rejects it instead of letting the unbound row variable flow into
# alias substitution (which previously paniced with an out-of-range
# array index).

type Stream[t, e] = () -> Option[t] / e

fn main() : Int = {
  let s : Stream[Int, a + Stdout] = () => None
  let _ = s
  0
}
